# ridgeback_simulator

ridgeback_gazebo/: CMakeLists.txt  package.xml
ridgeback_gazebo/launch/: empty_world.launch.py  ridgeback_world.launch.py  spawn_ridgeback.launch.py  start_ridgeback_controls.launch.py
ridgeback_simulator/: CMakeLists.txt  package.xml
