<?xml version="1.0"?>
<package format="3">
  <name>ridgeback_gazebo</name>
  <version>0.2.0</version>
  <description>Launchfiles to use Ridgeback in Gazebo.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ridgeback_gazebo</url>

<!--  <run_depend>ridgeback_gazebo_plugins</run_depend>-->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ridgeback_control</exec_depend>
  <exec_depend>ridgeback_description</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <!-- <gazebo_ros gazebo_media_path="${prefix}"/> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
