<?xml version="1.0"?>
<package format="3">
  <name>ridgeback_simulator</name>
  <version>0.2.0</version>
  <description>Packages for simulating Ridgeback.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ridgeback_simulator</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ridgeback_gazebo</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
